[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
