[package]
name = "dkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
curve25519-dalek.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
vss = { path = "../vss" }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
